welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:6: error: type mismatch;
 found   : Unit
 required: Int
}
^